--- a/index.css
+++ b/index.css
@@ -112,6 +112,55 @@ nav ul li a {
   background-color: #f7f7f7;
 }
 
+.about-content-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    max-width: 1200px;
+    flex-wrap: wrap;
+}
+
+.about-image {
+    position: relative;
+    width: 250px;
+    height: auto;
+}
+
+.about-image img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
+    transform: rotate(-3deg);
+    transition: all 0.3s ease-in-out;
+}
+
+.about-image:hover img {
+    transform: rotate(0deg) scale(1.05);
+    box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.2);
+}
+
+.about-text {
+    flex: 1;
+}
+
+.about-text h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.about-text p {
+    font-size: 12px;
+    color: #555;
+    line-height: 1.5;
+    margin-bottom: 15px;
+    max-width: 600px;
+    text-align: ;
+}
+
 .contact {
   background-color: #dcdcdc;
 }
@@ -241,58 +290,104 @@ footer {
 .copyright {
   font-size: 12px;
   margin-top: 10px;
+  color: black;
 }
 
-        .contact-form {
-            background: rgba(255, 255, 255, 0.1);;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-            width: 100%;
-            max-width: 400px; 
-        }
-        .contact-form h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .contact-form label {
-            display: block;
-            margin-bottom: 5px;
-            font-size: 14px;
-        }
-        .contact-form input, .contact-form textarea, .contact-form button {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-            background: white;
-        }
-        
-     .contact-form button {
-            display: block;
-            width: auto; 
-            margin: 0 auto 20px;
-            padding: 10px 15px;
-            border: none;
-            background: white;
-            border-radius: 5px;
-            color: black;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
+.custom-x-icon {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #3498db;
+  margin-bottom: 10px;
+  display: block;
+}
 
-        .contact-form button:hover {
-            background: white;
-        }
-        
-        .confirmation-message {
-            display: none;
-            margin-top: 10px;
-            color: black;
-            text-align: center;
-        }
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 40px;
+  gap: 30px;
+}
+
+.info-box {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  max-width: 400px;
+}
+
+.info-item {
+  background: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+}
+
+.info-item a {
+  text-decoration: none;
+  color: #333;
+}
+
+.info-item i {
+  font-size: 2rem;
+  color: #3498db;
+  margin-bottom: 10px;
+}
+
+.info-item .title {
+  font-weight: bold;
+  margin: 5px 0;
+}
+
+.form-box {
+  background: linear-gradient(135deg, #F8F8FF, #100C07);
+  padding: 50px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 400px;
+}
+
+.form-box h2 {
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+form input, form textarea, form button {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+form input, form textarea {
+  background: #ecf0f1;
+}
+
+form button {
+  background: white;
+  color: black;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+form button:hover {
+  background: #2980b9;
+}
+
+.confirmation-message {
+  display: none;
+  margin-top: 10px;
+  color: black;
+  text-align: center;
+}
 
 .grid {
     display: none;
@@ -357,7 +452,6 @@ footer {
     }
 }
 
-/* Pagination */
 .pagination {
     margin-top: 20px;
     text-align: center;
