--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ nav ul li a {
 
 .hero {
   position: relative;
-  height: 35vh;
+  height: 100vh;
   background: url('/images/background') no-repeat center center/cover;
   display: flex;
   justify-content: center;
@@ -101,7 +101,7 @@ nav ul li a {
 }
 
 .about, .contact, .explore {
-  height: 35vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -158,7 +158,6 @@ nav ul li a {
     line-height: 1.5;
     margin-bottom: 15px;
     max-width: 600px;
-    text-align: ;
 }
 
 .contact {
@@ -470,4 +469,37 @@ form button:hover {
 
 .pagination a:hover {
     background-color: lightgray;
+}
+
+@media (min-width: 1440px) {
+    body {
+        font-size: 18px; 
+    }
+
+    .grid {
+        grid-template-columns: repeat(4, 1fr); 
+    }
+
+    .hero h1 {
+        font-size: 48px; 
+    }
+
+    .about-content-container {
+        flex-direction: row;
+    }
+}
+
+
+@media (min-width: 1920px) {
+    .container {
+        max-width: 1600px;
+    }
+
+    .hero h1 {
+        font-size: 64px;
+    }
+
+    .grid {
+        grid-template-columns: repeat(5, 1fr); 
+    }
 }
