--- a/index.css
+++ b/index.css
@@ -34,16 +34,58 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
+  position: relative;
 }
 
 nav ul li {
   margin: 0 15px;
+  position: relative;
 }
 
 nav ul li a {
   color: black;
   text-decoration: none;
   font-size: 14px;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 5px;
+  list-style: none;
+}
+
+.dropdown-menu li {
+  padding: 5px 10px;
+}
+
+.dropdown-menu li a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.arrow {
+  font-size: 12px;
+  margin-left: 5px;
+  transition: transform 0.3s;
+}
+
+.dropdown:hover .arrow {
+  transform: rotate(180deg);
+}
+
+nav ul li a.active {
+  font-weight: bold;
+  color: #3498db;
 }
 
 .login-btn {
@@ -56,7 +98,7 @@ nav ul li a {
 .hero {
   position: relative;
   height: 100vh;
-  background: url('/images/background') no-repeat center center/cover;
+  background: url('/images/background1') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -460,4 +502,22 @@ form button:hover {
     .grid {
         grid-template-columns: repeat(5, 1fr); 
     }
+}
+
+@media (max-width: 768px) {
+  .nav ul {
+    flex-direction: column;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .about-content-container {
+    flex-direction: column;
+  }
+
+  .polaroid {
+    width: 100%;
+  }
 }
