--- a/index.css
+++ b/index.css
@@ -31,11 +31,22 @@ header {
             gap: 20px; 
         }
 
-        .logo {
-            color: black;
-            font-size: 22px;
-            font-weight: bold;
-        }
+    .logo {
+    display: flex;  
+    align-items: center; 
+    gap: 10px; 
+}
+
+.logo-img {
+    width: 50px; 
+    height: auto; 
+}
+
+strong {
+    color: black;
+    font-size: 22px;
+    font-weight: bold;
+}
 
         nav ul {
             list-style: none;
@@ -164,7 +175,7 @@ header {
 .right-section {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
 }
 
 .hero {
@@ -306,6 +317,7 @@ header {
             max-width: 900px;
             margin: auto;
             perspective: 1000px; 
+            justify-content: center;
         }
 
         .polaroid {
