--- a/index.css
+++ b/index.css
@@ -325,12 +325,13 @@ strong {
             height: 250px;
             background: white;
             padding: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
             text-align: center;
             transition: transform 0.5s;
             transform-style: preserve-3d;
             position: relative;
             cursor: pointer;
+            border-image: url('/images/border') 30 round;
         }
 
         .polaroid img {
