--- a/index.css
+++ b/index.css
@@ -181,7 +181,7 @@ strong {
 .hero {
   position: relative;
   height: 100vh;
-  background: url('/images/background1') no-repeat center center/cover;
+  background: url('/images/background') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
